--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "nuxt": "^2.15.8",
         "sass": "^1.43.2",
         "sass-loader": "^10.1.1",
+        "validate.js": "^0.13.1",
         "webpack": "^4.46.0"
     }
 }
