--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
         "dotenv": "^10.0.0",
         "element-ui": "^2.15.6",
         "fs-extra": "^10.0.0",
+        "monaco-editor": "^0.29.1",
+        "monaco-editor-vue": "^1.0.10",
         "nuxt": "^2.15.8",
         "sass": "^1.43.2",
         "sass-loader": "^10.1.1",
         "validate.js": "^0.13.1",
+        "vuedraggable": "^2.24.3",
         "webpack": "^4.46.0"
     }
 }
