--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "nuxt": "^2.15.8",
         "sass": "^1.43.2",
         "sass-loader": "^10.1.1",
+        "sweetalert2": "^11.1.9",
         "validate.js": "^0.13.1",
         "vuedraggable": "^2.24.3",
         "webpack": "^4.46.0"
