--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@nuxtjs/auth-next": "5.0.0-1624817847.21691f1",
         "@nuxtjs/axios": "^5.13.6",
         "@nuxtjs/pwa": "^3.3.5",
+        "ckeditor4-vue": "^1.3.2",
         "core-js": "^3.18.3",
         "dotenv": "^10.0.0",
         "element-ui": "^2.15.6",
