--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "dev": "nuxt",
+        "dev": "node serve.js",
         "build": "nuxt build",
         "generate": "nuxt generate",
         "start": "nuxt start",
